--- a/Templates/test-action/catalog-info.yaml
+++ b/Templates/test-action/catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: test-service-action-react-component 
+  name: app-3 
   description: Test component for service
   tags:
     - typescript
